Bug 23560 - bisected: black background on text areas
Summary: bisected: black background on text areas
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: 7.4 (2008.09)
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-27 12:49 UTC by Luca Tettamanti
Modified: 2009-08-28 03:25 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Sample corruption (7.57 KB, image/png)
2009-08-27 12:50 UTC, Luca Tettamanti
no flags Details
Possible fix (8.38 KB, patch)
2009-08-28 00:39 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Luca Tettamanti 2009-08-27 12:49:18 UTC
With current (7d36f13afa5da742aa6c989a2652e92c96e5f80e) git xf86-video-ati driver text areas are sometimes rendered with a black background. I've noticed the problem with firefox, I'm attaching a screenshot with an example of the problem.

I've bisected the bug down to this commit:

27d9664f8862d1948dd32021f8e9bcb94f23e4ef is first bad commit
commit 27d9664f8862d1948dd32021f8e9bcb94f23e4ef             
Author: Michel Dänzer <daenzer@vmware.com>                  
Date:   Thu Aug 27 09:52:10 2009 +0200                      

    EXA: RENDER repeat cleanups.
                                
    We can't rely on the server setting pPict->repeatType to something sensible
    when pPict->repeat is FALSE, but we can do it ourselves.
Comment 1 Luca Tettamanti 2009-08-27 12:50:12 UTC
Created attachment 28955 [details]
Sample corruption
Comment 2 Michel Dänzer 2009-08-28 00:39:11 UTC
Created attachment 28975 [details] [review]
Possible fix

Does this patch fix the problem?

If not, please attach the Xorg.0.log file (BTW, this is pretty much a requirement for any X related bug report).
Comment 3 Luca Tettamanti 2009-08-28 03:06:41 UTC
(In reply to comment #2)
> Created an attachment (id=28975) [details]
> Possible fix
> 
> Does this patch fix the problem?

Yes, it does.

> If not, please attach the Xorg.0.log file (BTW, this is pretty much a
> requirement for any X related bug report).

Ops sorry, I was pretty sure that I did attach the log...
Comment 4 Michel Dänzer 2009-08-28 03:25:37 UTC
Fixed in Git commit 39dfac41eebbcdacb1ae0c17cea325ea2966c4a5, thanks for testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.