EXA: RENDER repeat fix and more cleanup.

Apparently changing pPict->repeatType causes badness, see
http://bugs.freedesktop.org/show_bug.cgi?id=23560 .

Now we just use a normalized repeatType value derived from pPict->repeat and
pPict->repeatType everywhere.